edit socketmessege app

--- a/src/socket-messages/index.html
+++ b/src/socket-messages/index.html
@@ -36,6 +36,8 @@
 <body>
   <div id="message-container"></div>
   <form id="form">
+    <input type="text" id="user-name" placeholder="Enter your username">
+    <button type="submit" id="user-button">Submit</button>
     <label for="message-input">Message</label>
     <input type="text" id="message-input">
     <button type="submit" id="send-button">send</button>
